force-app/main/default/objects/RT_PriceOutput__c/RT_PriceOutput__c.object-meta.xml
<CustomObject>
    <label>Turkey Price Output</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Price Output Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turkey Price Outputs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>