force-app/main/default/objects/RT_PriceOutput__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>if(ISBLANK(Text(SoldToName__r.Type )), &apos;-&apos;, Text(SoldToName__r.Type ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>