force-app/main/default/objects/RT_PriceOutput__c/fields/Aureus_Data__c.field-meta.xml
<CustomField>
    <fullName>Aureus_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aureus Data</label>
    <referenceTo>REV_Contract_Master__c</referenceTo>
    <relationshipName>Price_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>