force-app/main/default/objects/RT_PriceOutput__c/fields/AureusAmount__c.field-meta.xml
<CustomField>
    <fullName>AureusAmount__c</fullName>
    <label>Aureus Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>