force-app/main/default/objects/RT_PriceOutput__c/fields/CF_IMM__c.field-meta.xml
<CustomField>
    <fullName>CF_IMM__c</fullName>
    <label>Commercial Fuel Margin Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>