force-app/main/default/objects/RT_PriceOutput__c/fields/Defined_Depot_Price__c.field-meta.xml
<CustomField>
    <fullName>Defined_Depot_Price__c</fullName>
    <label>Defined Depot Price (w/o VAT)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>