force-app/main/default/objects/RT_PriceOutput__c/fields/Defined_Refinery_Price__c.field-meta.xml
<CustomField>
    <fullName>Defined_Refinery_Price__c</fullName>
    <label>Defined Refinery Price (w/o VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>