force-app/main/default/objects/RT_PriceOutput__c/fields/Depot_Price__c.field-meta.xml
<CustomField>
    <fullName>Depot_Price__c</fullName>
    <label>Depot Price (w/o VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>