force-app/main/default/objects/RT_PriceOutput__c/fields/DepotAbbreviatedName__c.field-meta.xml
<CustomField>
    <fullName>DepotAbbreviatedName__c</fullName>
    <formula>DepotName__r.RE_Abbreviated_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Abbreviated Name</label>
    <type>Text</type>
</CustomField>