force-app/main/default/objects/RT_PriceOutput__c/fields/DepotCode__c.field-meta.xml
<CustomField>
    <fullName>DepotCode__c</fullName>
    <formula>DepotName__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>