force-app/main/default/objects/RT_PriceOutput__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Discount</fullName>
                <default>true</default>
                <label>No Discount</label>
            </value>
            <value>
                <fullName>YP04 - Percentage</fullName>
            </value>
            <value>
                <fullName>YP04 - Unit</fullName>
            </value>
            <value>
                <fullName>YP04 - Tupras Flat</fullName>
            </value>
            <value>
                <fullName>YD05 - Percentage</fullName>
            </value>
            <value>
                <fullName>YD07 - Unit</fullName>
            </value>
            <value>
                <fullName>YD06 - Unit</fullName>
            </value>
            <value>
                <fullName>YD07_YD06 - Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>