force-app/main/default/objects/RT_PriceOutput__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Price_Outputs_Editor</relationshipName>
    <type>Lookup</type>
</CustomField>