force-app/main/default/objects/RT_PriceOutput__c/fields/EMRA__c.field-meta.xml
<CustomField>
    <fullName>EMRA__c</fullName>
    <label>EMRA Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>