force-app/main/default/objects/RT_PriceOutput__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <formula>SoldToName__r.RT_Exception__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude From Daily Price Output</label>
    <type>Checkbox</type>
</CustomField>