force-app/main/default/objects/RT_PriceOutput__c/fields/ImportProductRatio__c.field-meta.xml
<CustomField>
    <fullName>ImportProductRatio__c</fullName>
    <formula>DepotName__r.RT_ImportProductRatio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Product Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>