force-app/main/default/objects/RT_PriceOutput__c/fields/ImportTerminal__c.field-meta.xml
<CustomField>
    <fullName>ImportTerminal__c</fullName>
    <formula>DepotName__r.RT_Import_Terminal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Terminal?</label>
    <type>Checkbox</type>
</CustomField>