force-app/main/default/objects/RT_PriceOutput__c/fields/MarginAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>MarginAfterDiscount__c</fullName>
    <label>Margin After Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>