force-app/main/default/objects/RT_PriceOutput__c/fields/MaterialGrade__c.field-meta.xml
<CustomField>
    <fullName>MaterialGrade__c</fullName>
    <formula>ProductName__r.RT_Parent_Product__r.RT_Parent_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Grade</label>
    <type>Text</type>
</CustomField>