force-app/main/default/objects/RT_PriceOutput__c/fields/MaterialSubGrade__c.field-meta.xml
<CustomField>
    <fullName>MaterialSubGrade__c</fullName>
    <formula>ProductName__r.RT_Parent_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Subgrade</label>
    <type>Text</type>
</CustomField>