force-app/main/default/objects/RT_PriceOutput__c/fields/PaymentDescription__c.field-meta.xml
<CustomField>
    <fullName>PaymentDescription__c</fullName>
    <formula>SoldToName__r.RT_PaymentDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Description</label>
    <type>Text</type>
</CustomField>