force-app/main/default/objects/RT_PriceOutput__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>ProductName__r.RT_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>