force-app/main/default/objects/RT_PriceOutput__c/fields/ProductGrade__c.field-meta.xml
<CustomField>
    <fullName>ProductGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Grade</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Turkey Price Outputs (Product Grade)</relationshipLabel>
    <relationshipName>Turkey_Price_Outputs1</relationshipName>
    <type>Lookup</type>
</CustomField>