force-app/main/default/objects/RT_PriceOutput__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Name</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipName>Price_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>