force-app/main/default/objects/RT_PriceOutput__c/fields/ProductSubGrade__c.field-meta.xml
<CustomField>
    <fullName>ProductSubGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product SubGrade</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Turkey Price Outputs (Product SubGrade)</relationshipLabel>
    <relationshipName>Turkey_Price_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>