force-app/main/default/objects/RT_PriceOutput__c/fields/Pump_Price_wo_Tax__c.field-meta.xml
<CustomField>
    <fullName>Pump_Price_wo_Tax__c</fullName>
    <label>Pump Price (w/o VAT, SCT &amp; EMRA Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>