force-app/main/default/objects/RT_PriceOutput__c/fields/PUMP_REFINERY_DIFF__c.field-meta.xml
<CustomField>
    <fullName>PUMP_REFINERY_DIFF__c</fullName>
    <label>Pump ~ Refinery Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>