force-app/main/default/objects/RT_PriceOutput__c/fields/RefineryCode__c.field-meta.xml
<CustomField>
    <fullName>RefineryCode__c</fullName>
    <formula>RefineryName__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinery Code</label>
    <type>Text</type>
</CustomField>