force-app/main/default/objects/RT_PriceOutput__c/fields/SCT__c.field-meta.xml
<CustomField>
    <fullName>SCT__c</fullName>
    <label>SCT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>