force-app/main/default/objects/RT_PriceOutput__c/fields/Shell_IMM__c.field-meta.xml
<CustomField>
    <fullName>Shell_IMM__c</fullName>
    <label>Shell Margin Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>