force-app/main/default/objects/RT_PriceOutput__c/fields/SiteCode__c.field-meta.xml
<CustomField>
    <fullName>SiteCode__c</fullName>
    <formula>SiteName__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Code</label>
    <type>Text</type>
</CustomField>