force-app/main/default/objects/RT_PriceOutput__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RE_Location__c.RT_Location_Type__c</field>
            <operation>equals</operation>
            <value>Retail Site</value>
        </filterItems>
        <filterItems>
            <field>RE_Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Turkey</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Price_Output_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>