force-app/main/default/objects/RT_PriceOutput__c/fields/SoldToName__c.field-meta.xml
<CustomField>
    <fullName>SoldToName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Price_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>