force-app/main/default/objects/RT_PriceOutput__c/fields/SoldToNumber__c.field-meta.xml
<CustomField>
    <fullName>SoldToNumber__c</fullName>
    <formula>SoldToName__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Number</label>
    <type>Text</type>
</CustomField>