force-app/main/default/objects/RT_PriceOutput__c/fields/TotalPostDiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPostDiscountPrice__c</fullName>
    <label>Total Post Discount Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>