force-app/main/default/objects/RT_PriceOutput__c/fields/YD06_Amount__c.field-meta.xml
<CustomField>
    <fullName>YD06_Amount__c</fullName>
    <label>YD07_YD06 Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>