force-app/main/default/objects/RT_PriceOutput__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SoldToNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>MaterialSubGrade__c</columns>
    <columns>MaterialGrade__c</columns>
    <columns>DepotCode__c</columns>
    <columns>RefineryCode__c</columns>
    <columns>Approver__c</columns>
    <columns>Status__c</columns>
    <columns>Editor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>