force-app/main/default/objects/RT_PriceOutput__c/listViews/Today_s_Price.listView-meta.xml
<ListView>
    <fullName>Today_s_Price</fullName>
    <columns>NAME</columns>
    <columns>SoldToNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>MaterialSubGrade__c</columns>
    <columns>MaterialGrade__c</columns>
    <columns>DepotCode__c</columns>
    <columns>RefineryCode__c</columns>
    <columns>Approver__c</columns>
    <columns>CF_IMM__c</columns>
    <columns>Status__c</columns>
    <columns>Editor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PriceDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ImportTerminal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AccountType__c</field>
        <operation>equals</operation>
        <value>Resellers</value>
    </filters>
    <filters>
        <field>Exception__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RT_Country__c</field>
        <operation>equals</operation>
        <value>TU</value>
    </filters>
    <label>Today&apos;s Price</label>
    <sharedTo>
        <territory>Revolution_Territory.Turkey</territory>
    </sharedTo>
</ListView>